Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-22436

memcached incorrectly reports NUMA mode of 'interleaved' if syscall fails

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 5.0.0
    • 4.5.1
    • memcached
    • Docker
    • Untriaged
    • Unknown

    Description

      When running in an environment where the memcached process does not have sufficient privileges to set NUMA options, we don't check the request succeeded and hence print a "success" message even if it failed:

      NUMA: Set memory allocation policy to 'interleave'.
      

      By comparison, numactl prints the following:

      $ docker exec 67 numactl --interleave=all bin/true
      set_mempolicy: Operation not permitted
      setting interleave mask: Operation not permitted
      

      We should fix the message to make it clear the setting failed.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            drigby Dave Rigby (Inactive)
            drigby Dave Rigby (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty